--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
   <head>
-    
+    <link href="style.css" rel="stylesheet"/>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <div class="Headers">
+      <h1>Dac Tri Ho</h1>
+      <h2>Welcome to the Treehouse</h2>
+    </div>
   </body>
 </html>
