--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tri Portfolio</title>
     <link href="style.css" rel="stylesheet"/>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
   <body>
-    <div class="Headers">
-      <h1>Dac Tri Ho</h1>
-      <h2>Welcome to the Treehouse</h2>
-    </div>
   </body>
 </html>
