--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tri Portfolio</title>
     <link href="style.css" rel="stylesheet"/>
-    <link rel="icon" type="image/x-icon" href="favicon.ico"/>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
   </head>
   <body>
   </body>
