feat: added tree and divided different sections

--- a/index.html
+++ b/index.html
@@ -8,5 +8,45 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
   </head>
   <body>
+    <div class="tree">
+      <div class="trunk"></div>
+      <div class="branch branch1" onclick="showSection('about')">About Me</div>
+      <div class="branch branch2" onclick="showSection('experiences')">Experiences</div>
+      <div class="branch branch2" onclick="showSection('contacts')">Contacts</div>
+    </div>
+
+    <div id="information">
+      <div class="section" id="about" >
+        <h1>About Me</h1>
+        <h2>Bio</h2>
+        <p>[PlaceHolder]</p>
+        <h2>Skills</h2>
+        <p>[PlaceHolder]</p>
+        <h2>Education</h2>
+        <p>[PlaceHolder]</p>
+      </div>
+      
+      <div class="section" id="experiences">
+        <h1>Experiences</h1>
+        <h2>Academic Projects</h2>
+        <p>[PlaceHolder]</p>
+        <h2>Volunteer Work</h2>
+        <p>[PlaceHolder]</p>
+        <h2>Hobbies</h2>
+        <p>[PlaceHolder]</p>
+      </div>
+
+      <div class="section" id="contacts">
+        <h1>Experiences</h1>
+        <h2>Academic Projects</h2>
+        <p>[PlaceHolder]</p>
+        <h2>Volunteer Work</h2>
+        <p>[PlaceHolder]</p>
+        <h2>Hobbies</h2>
+        <p>[PlaceHolder]</p>
+      </div>
+    </div>
+
+    </div>
   </body>
 </html>
