--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="trunk"></div>
       <div class="branch branch1" onclick="showSection('about')">About Me</div>
       <div class="branch branch2" onclick="showSection('experiences')">Experiences</div>
-      <div class="branch branch2" onclick="showSection('contacts')">Contacts</div>
+      <div class="branch branch3" onclick="showSection('contacts')">Contacts</div>
     </div>
 
     <div id="information">
@@ -37,12 +37,14 @@
       </div>
 
       <div class="section" id="contacts">
-        <h1>Experiences</h1>
-        <h2>Academic Projects</h2>
+        <h1>Contacts</h1>
+        <h2>GitHub</h2>
         <p>[PlaceHolder]</p>
-        <h2>Volunteer Work</h2>
+        <h2>LinkedIn</h2>
         <p>[PlaceHolder]</p>
-        <h2>Hobbies</h2>
+        <h2>Email</h2>
+        <p>[PlaceHolder]</p>
+        <h2>Phonenumber</h2>
         <p>[PlaceHolder]</p>
       </div>
     </div>
