--- a/index.html
+++ b/index.html
@@ -8,14 +8,24 @@
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
   </head>
   <body>
+    <!--Photo and Name-->
+    <div class="header">
+      <img src="images/Me.jpg" alt="My Photo" class="profile-photo">
+      <h1>Dac Tri Ho</h1>
+    </div>
+    
+    <!--The Tree-->
     <div class="tree">
-      <div class="trunk"></div>
-      <div class="branch branch1" onclick="showSection('about')">About Me</div>
-      <div class="branch branch2" onclick="showSection('experiences')">Experiences</div>
-      <div class="branch branch3" onclick="showSection('contacts')">Contacts</div>
+      <div class="nest">
+        <div class="nest nest1" onclick="showSection('about')">About Me</div>
+        <div class="nest nest2" onclick="showSection('experiences')">Experiences</div>
+        <div class="nest nest3" onclick="showSection('contacts')">Contacts</div>
+      </div>
     </div>
 
+    <!--Sections-->
     <div id="information">
+      <!--About Me-->
       <div class="section" id="about" >
         <h1>About Me</h1>
         <h2>Bio</h2>
@@ -26,25 +36,25 @@
         <p>[PlaceHolder]</p>
       </div>
       
+      <!--Experiences-->
       <div class="section" id="experiences">
         <h1>Experiences</h1>
         <h2>Academic Projects</h2>
         <p>[PlaceHolder]</p>
         <h2>Volunteer Work</h2>
         <p>[PlaceHolder]</p>
-        <h2>Hobbies</h2>
+        <h2>Resume/CV</h2>
         <p>[PlaceHolder]</p>
       </div>
 
+      <!--Contacts-->
       <div class="section" id="contacts">
         <h1>Contacts</h1>
         <h2>GitHub</h2>
         <p>[PlaceHolder]</p>
         <h2>LinkedIn</h2>
         <p>[PlaceHolder]</p>
-        <h2>Email</h2>
-        <p>[PlaceHolder]</p>
-        <h2>Phonenumber</h2>
+        <h2>Email/Phone</h2>
         <p>[PlaceHolder]</p>
       </div>
     </div>
