feat: added the tree for main page

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
     </div>
     
     <!--The Tree-->
-    <div class="tree">
-      <div class="nest">
-        <div class="nest nest1" onclick="showSection('about')">About Me</div>
-        <div class="nest nest2" onclick="showSection('experiences')">Experiences</div>
-        <div class="nest nest3" onclick="showSection('contacts')">Contacts</div>
+    <div class="tree-container">
+      <div class="tree">
+        <div class="nest">
+          <div class="nest nest1" onclick="showSection('about')">About Me</div>
+          <div class="nest nest2" onclick="showSection('experiences')">Experiences</div>
+          <div class="nest nest3" onclick="showSection('contacts')">Contacts</div>
+        </div>
       </div>
     </div>
 
