--- a/index.html
+++ b/index.html
@@ -8,15 +8,24 @@
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
   </head>
   <body>
-    <!--Photo and Name-->
-    <div class="header">
-      <img src="images/Me.jpg" alt="My Photo" class="profile-photo">
-      <h1>Dac Tri Ho</h1>
+    <!--Top Nav Bar-->
+    <div class="topnav">
+      <a class="active" href="#home">Home</a>
+      <a href="#about">About Me</a>
+      <a href="#experiences">Experiences</a>
+      <a href="#contacts">Contacts</a>
     </div>
     
-    <!--The Tree-->
-    <div class="tree-container">
-      <div class="tree">
+    <!--Home Section-->
+    <div id="home">
+      <!--Photo and Name-->
+      <div class="header">
+        <img src="images/Me.jpg" alt="My Photo" class="profile-photo">
+        <h1 class="my-name">Dac Tri Ho</h1>
+      </div>
+      
+      <!--The Tree-->
+      <div class="tree-container">
         <div class="nest">
           <div class="nest nest1" onclick="showSection('about')">About Me</div>
           <div class="nest nest2" onclick="showSection('experiences')">Experiences</div>
