feat: added short overview box

--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
         <img src="images/Me.jpg" alt="My Photo" class="profile-photo">
         <h1 class="my-name">Dac Tri Ho</h1>
       </div>
+      <!--Overview-->
       <div class="overview">
-        <h2>Welcome to my portfolio website</h2>
+        <h2>Hi, I'm <span>Dac Tri Ho!</span> Welcome to my Portfolio Website 🌲</h2>
+        <h2>You can check out more about who I am below or by using the navigation bar</h2>
       </div>
     </div>  
 
