feat: added dividers for the sections

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
         <p>[PlaceHolder]</p>
       </div>
       
+      <hr class="divider"> <!-- Divider -->
+
       <!--Experiences-->
       <div class="section" id="experiences">
         <h1>Experiences</h1>
@@ -58,6 +60,8 @@
         <p>[PlaceHolder]</p>
       </div>
 
+      <hr class="divider"> <!-- Divider -->
+      
       <!--Contacts-->
       <div class="section" id="contacts">
         <h1>Contacts</h1>
