--- a/index.html
+++ b/index.html
@@ -38,46 +38,59 @@
     <!--Sections-->
     <div id="information">
       <!--About Me-->
-      <div class="section" id="about" >
+      <div class="section" id="about">
         <h1>About Me</h1>
-        <h2>Bio</h2>
-        <p>[PlaceHolder]</p>
-        <h2>Skills</h2>
-        <p>[PlaceHolder]</p>
-        <h2>Education</h2>
-        <p>[PlaceHolder]</p>
+        <div class="content-box">
+          <h2>Bio</h2>
+          <p>[PlaceHolder]</p>
+        </div>
+        <div class="content-box">
+          <h2>Skills</h2>
+          <p>[PlaceHolder]</p>
+        </div>
+        <div class="content-box">
+          <h2>Education</h2>
+          <p>[PlaceHolder]</p>
+        </div>
       </div>
-      
+
       <hr class="divider"> <!-- Divider -->
 
       <!--Experiences-->
       <div class="section" id="experiences">
         <h1>Experiences</h1>
-        <h2>Academic Projects</h2>
-        <p>[PlaceHolder]</p>
-        <h2>Volunteer Work</h2>
-        <p>[PlaceHolder]</p>
-        <h2>Resume/CV</h2>
-        <p>[PlaceHolder]</p>
+        <div class="content-box">
+          <h2>Academic Projects</h2>
+          <p>[PlaceHolder]</p>
+        </div>
+        <div class="content-box">
+          <h2>Volunteer Work</h2>
+          <p>[PlaceHolder]</p>
+        </div>
+        <div class="content-box">
+          <h2>Resume/CV</h2>
+          <p>[PlaceHolder]</p>
+        </div>
       </div>
 
       <hr class="divider"> <!-- Divider -->
-      
+
       <!--Contacts-->
       <div class="section" id="contacts">
         <h1>Contacts</h1>
-        <div class="content">
-          <div id="github">
-            <h2>GitHub</h2>
-            <p>[PlaceHolder]</p>
-          </div>
+        <div class="content-box">
+          <h2>GitHub</h2>
+          <p>[PlaceHolder]</p>
+        </div>
+        <div class="content-box">
           <h2>LinkedIn</h2>
           <p>[PlaceHolder]</p>
+        </div>
+        <div class="content-box">
           <h2>Email/Phone</h2>
           <p>[PlaceHolder]</p>
         </div>
       </div>
     </div>
-
   </body>
 </html>
