feat: improved the contacts section

--- a/index.html
+++ b/index.html
@@ -80,11 +80,9 @@
         <h1>Contacts</h1>
         <div class="content-box">
           <h2>GitHub</h2>
-          <p>[PlaceHolder]</p>
           <h2>LinkedIn</h2>
-          <p>[PlaceHolder]</p>
-          <h2>Email/Phone</h2>
-          <p>[PlaceHolder]</p>
+          <h2>Email</h2>
+          <h2>Phone</h2>
         </div>
       </div>
     </div>
