--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tri Portfolio</title>
     <link href="style.css" rel="stylesheet"/>
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="icons/favicon.ico" type="image/x-icon" />
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Darumadrop+One&family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Darumadrop+One&family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Monomaniac+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cantata+One&display=swap" rel="stylesheet">
   </head>
   <body>
@@ -78,11 +78,23 @@
       <!--Contacts-->
       <div class="section" id="contacts">
         <h1>Contacts</h1>
-        <div class="content-box">
-          <h2>GitHub</h2>
-          <h2>LinkedIn</h2>
-          <h2>Email</h2>
-          <h2>Phone</h2>
+        <div class="contacts-grid">
+          <div class="contact-item">
+            <h2>GitHub</h2>
+            <img src="icons/github-mark.png" alt="Clickable GitHub's Icon">
+          </div>
+          <div class="contact-item">
+            <h2>LinkedIn</h2>
+            <img src="icons/linkedin-mark.png" alt="Clickable LinkedIn's Icon">
+          </div>
+          <div class="contact-item">
+            <h2>Email</h2>
+            <img src="icons/mail-mark.png" alt="Clickable Mail's Icon">
+          </div>
+          <div class="contact-item">
+            <h2>Phone</h2>
+            <img src="icons/phone-mark.png" alt="Clickable Phone's Icon">
+          </div>
         </div>
       </div>
     </div>
