feat: added links to contacts

--- a/index.html
+++ b/index.html
@@ -81,19 +81,27 @@
         <div class="contacts-grid">
           <div class="contact-item">
             <h2>GitHub</h2>
-            <img src="icons/github-mark.png" alt="Clickable GitHub's Icon">
+            <a href="https://github.com/DacTriHo" target="_blank">
+              <img src="icons/github-mark.png" alt="Clickable GitHub's Icon">
+            </a>
           </div>
           <div class="contact-item">
             <h2>LinkedIn</h2>
-            <img src="icons/linkedin-mark.png" alt="Clickable LinkedIn's Icon">
+            <a href="https://www.linkedin.com/in/tri-ho-36baa5343/" target="_blank">
+              <img src="icons/linkedin-mark.png" alt="Clickable LinkedIn's Icon">
+            </a>
           </div>
           <div class="contact-item">
             <h2>Email</h2>
-            <img src="icons/mail-mark.png" alt="Clickable Mail's Icon">
+            <a href="mailto:trihodac66@gmail.com">
+              <img src="icons/mail-mark.png" alt="Clickable Mail's Icon">
+            </a>
           </div>
           <div class="contact-item">
             <h2>Phone</h2>
-            <img src="icons/phone-mark.png" alt="Clickable Phone's Icon">
+            <a href="tel:+7099862103">
+              <img src="icons/phone-mark.png" alt="Clickable Phone's Icon">
+            </a>
           </div>
         </div>
       </div>
