fix: fixed phone number

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           </div>
           <div class="contact-item">
             <h2>Phone</h2>
-            <a href="tel:+7099862103">
+            <a href="tel:709-986-2103">
               <img src="icons/phone-mark.png" alt="Clickable Phone's Icon">
             </a>
           </div>
