feat: added bio

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
       <!--Overview-->
       <div class="overview">
-        <h2>Hi, I'm <span>Dac Tri Ho!</span> Welcome to my Portfolio Website 🌲</h2>
+        <h2>Hi, I'm <span class="home-name">Dac Tri Ho!</span> Welcome to my Portfolio Website 🌲</h2>
         <h2>You can check out more about who I am below or by using the navigation bar</h2>
       </div>
     </div>  
@@ -40,11 +40,17 @@
       <!--About Me-->
       <div class="section" id="about">
         <h1>About Me</h1>
-        <div class="content-box">
+        <div class="content-box" id="bio">
           <h2>Bio</h2>
-          <p>[PlaceHolder]</p>
+          <p>
+            My name is Dac Tri Ho and I am Computer Science major of Simon Fraser University.
+            <br>Born in 2005 and raised in Ho Chi Minh City, Vietnam. I have only been in Canada since 2021.
+            <br><br>I have always enjoyed coding since I started learning the basics of it since Highschol.
+            <br>I also enjoy doing puzzle-related activities and just generally learning more about the world around me.
+            <br><span class="quote">"The best time to plant a tree is twenty years ago. The second best time is today.”<br>― Stephen M.R. Covey, The SPEED of Trust: The One Thing that Changes Everything</span>
+          </p>
         </div>
-        <div class="content-box">
+        <div class="content-box" id="skills">
           <h2>Skills</h2>
           <p>[PlaceHolder]</p>
         </div>
