--- a/index.html
+++ b/index.html
@@ -52,7 +52,35 @@
         </div>
         <div class="content-box" id="skills">
           <h2>Skills</h2>
-          <p>[PlaceHolder]</p>
+          <div class="skills-grid">
+            <div class="skill-column">
+              <h3>Programming Languages</h3>
+              <ul>
+                <li>C++</li>
+                <li>C#</li>
+                <li>C</li>
+                <li>Python</li>
+                <li>Assembly (RISC-V)</li>
+              </ul>
+            </div>
+            <div class="skill-column">
+              <h3>Operating Systems</h3>
+              <ul>
+                <li>Windows</li>
+                <li>Linux</li>
+              </ul>
+            </div>
+            <div class="skill-column">
+              <h3>Softwares</h3>
+              <ul>
+                <li>Visual Studio Code</li>
+                <li>Unity</li>
+                <li>IDLE</li>
+                <li>MATLAB</li>
+                <li>Microsoft Office</li>
+              </ul>
+            </div>
+          </div>
         </div>
         <div class="content-box">
           <h2>Education</h2>
