feat: added education

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
       <!--About Me-->
       <div class="section" id="about">
         <h1>About Me</h1>
+        <!--Bio-->
         <div class="content-box" id="bio">
           <h2>Bio</h2>
           <p>
@@ -50,6 +51,8 @@
             <br><span class="quote">"The best time to plant a tree is twenty years ago. The second best time is today.”<br>― Stephen M.R. Covey, The SPEED of Trust: The One Thing that Changes Everything</span>
           </p>
         </div>
+
+        <!--Skills-->
         <div class="content-box" id="skills">
           <h2>Skills</h2>
           <div class="skills-grid">
@@ -82,9 +85,28 @@
             </div>
           </div>
         </div>
-        <div class="content-box">
-          <h2>Education</h2>
-          <p>[PlaceHolder]</p>
+
+        <!--Education-->
+        <div class="content-box" id="skills">
+        <h2>Education</h2>
+          <div class="education-grid">
+            <div class="education-item">
+              <img src="icons/SFU-mark.png" alt="SFU Icon">
+              <div class="education-text">
+                <h3>Bachelor of Science in Computer Science</h3>
+                <p>September 2023 - Present</p>
+                <p>Simon Fraser University - Burnaby, BC | CGPA: 3.69 out of 4.33</p>
+              </div>
+            </div>
+            <div class="education-item">
+              <img src="icons/Gonzaga-mark.png" alt="Gonzaga Icon">
+              <div class="education-text">
+                <h3>Highschool Diploma</h3>
+                <p>September 2021 - June 2023</p>
+                <p>Gonzaga High School - St. John's, NL</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
