feat: added volunteer works and resume download

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <div class="education-text">
                 <h3>Bachelor of Science in Computer Science</h3>
                 <p>September 2023 - Present</p>
-                <p>Simon Fraser University - Burnaby, BC | CGPA: 3.69 out of 4.33</p>
+                <p>Simon Fraser University - Burnaby, BC | CGPA: 3.69</p>
               </div>
             </div>
             <div class="education-item">
@@ -114,7 +114,7 @@
         </div>
       </div>
 
-      <hr class="divider"> <!-- Divider -->
+      <hr class="divider d1"> <!-- Divider -->
 
       <!--Experiences-->
       <div class="section" id="experiences">
@@ -162,17 +162,42 @@
         <!--Volunteer-->
         <div class="content-box" id="volunteer">
           <h2>Volunteer Work</h2>
-          <p>[PlaceHolder]</p>
+          <div class="volunteer-grid">
+            <div class="volunteer-item">
+              <img src="icons/tutor-mark.png" alt="Tutor Icon">
+              <h3>Peer Tutor for Introduction to Computer Systems
+                <br>Simon Fraser University - Burnaby, BC
+              </h3>
+              <ul>
+                <li>Tutored students in Introduction to Computer Systems (CMPT 295) by providing guidance on key concepts such as computer architecture, RISC-V, caches, pipelines, memory systems, and assembly language programming.</li>
+                <li>Explained complex topics such as pipelining and cache performance using approaches that have helped me through the course to enhance understanding and application for new students.</li>
+                <li>Assisted newer students with debugging and optimizing C and assembly code while emphasizing best practices in low-level programming that I have learnt myself through my own experiences of the course.</li>
+              </ul>
+            </div>
+            <div class="volunteer-item">
+              <img src="icons/library-mark.png" alt="Library Volunteer Icon">
+              <h3>Library Volunteer
+                <br>High School's Library - Gonzaga High School - St. John's, NL
+              </h3>
+              <ul>
+                <li>Mainly worked in the book room with other volunteers to help organize and keep stock of books that were not used in the main library.</li>
+                <li>Helped set up and clean up the library before and after presentations and events whenever they are scheduled.</li>
+                <li>Distributed and collected textbooks from each classroom at the start and end of each semester to ensure accurate inventory management and proper allocation of books.</li>
+              </ul>
+            </div>
+          </div>
         </div>
 
         <!--Resume-->
         <div class="content-box" id="resume">
           <h2>Resume</h2>
-          <p>[PlaceHolder]</p>
+          <a href="images/Resume.pdf" download>
+            <img src="icons/pdf-mark.png" alt="Download Resume Icon">
+          </a>
         </div>
       </div>
 
-      <hr class="divider"> <!-- Divider -->
+      <hr class="divider d2"> <!-- Divider -->
 
       <!--Contacts-->
       <div class="section" id="contacts">
